tests/AST/struct-invalid-stmt.bel
# RUN: %not %belalang build --emit ast %s | %FileCheck %s

struct A {
  return 1
}

# CHECK:      error: error parsing struct
# CHECK-NEXT:  --> {{.*}}/tests/AST/struct-invalid-stmt.bel:4:3
# CHECK-NEXT:   |
# CHECK-NEXT: 4 |   return 1
# CHECK-NEXT:   |   ^^^^^^^^ invalid statement
